--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts start",
+    "start": "react-scripts start",
     "build": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts build",
     "test": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts test --env=jsdom",
     "eject": "NODE_OPTIONS='--openssl-legacy-provider' react-scripts eject"
